--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
 .navbar ul {
     display: flex;
     flex-direction: column;
-    list-style: none;
     padding: 0;
     margin: 100px;
     align-items: center;
@@ -68,6 +67,8 @@
 .descripcion {
     display: flex;
     padding: 10px;
+    flex-direction: column;
+    align-items: center;
 }
 .descripcion__articulos {
     width: 50%;
@@ -84,6 +85,8 @@
 .button {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
 }
 .button__articulo {
@@ -129,6 +132,8 @@
     display: flex;
     padding: 10px;
     background-color: skyblue;
+    flex-direction: column;
+    align-items: center;
 }
 .coleccion__footer {
     width: 40%;
