--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
     padding: 0;
     margin: 100px;
     align-items: center;
+    list-style: none;
     
 }
 .navbar li {
@@ -54,6 +55,7 @@
     display: flex;
     padding: 10px;
     flex-direction: column;
+    align-items: center;
 }
 .articulo__imagen {
     width: 50%;
