--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,9 @@
     display: flex;
     padding: 10px;
     flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin: 100px;
     
 }
 .descripcion__articulos {
@@ -81,7 +84,7 @@
     text-align: center;
     font-family: 'Lucida Sans';
     font-size: 15px;
-    margin-top: -200px;
+    
 
 }
 .button {
