--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,6 @@
 }
 .descripcion {
     display: flex;
-    padding: 10px;
     flex-direction: column;
     align-items: center;
     padding: 0;
@@ -91,6 +90,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding: 0;
+    margin: 100px;
     
 
 }
@@ -105,7 +106,6 @@
     transition: background-color 0.3s;
     font-size: 15px;
     position: relative;
-    margin-top: -90px;
     margin-bottom: 30px;
     
 }
