--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@
     color: blueviolet;
     font-size: 30px;
     margin-top: 40px;
+    margin-bottom: 20px;
 
 }
 .articulos {
@@ -64,6 +65,7 @@
     border: 2px solid white;
     line-height: 100%;
     text-align: center;
+    margin-bottom: 10px;
 
 }
 .descripcion {
@@ -135,9 +137,10 @@
 }
 .coleccion {
     display: flex;
-    padding: 10px;
+    padding: 0;
     background-color: skyblue;
     flex-direction: column;
+    align-items: center;
     
 }
 .coleccion__footer {
@@ -148,7 +151,7 @@
     line-height: 100%;
     text-align: center;
     font-style: italic;
-    font-size: 10px;
+    font-size: 20px;
 }
 .iconos {
     display: flex;
