--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,8 @@
 .ayudatarjetas {
     display: flex;
     padding: 10px;
+    flex-direction: column;
+    align-items: center;
 }
 .ayuda__tarjetas1 {
     width: 20%;
@@ -390,7 +392,6 @@
     line-height: 100%;
     text-align: center;
     margin: 30px 30px;
-    margin-bottom: 30px;
 }
 .tarjetacarrito__2 {
     width: 50%;
