--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@
     color: skyblue;
     font-size: 30px ;
     margin-top: 100px;
+    text-align: center;
 }
 .tarjetas {
     display: flex;
@@ -368,7 +369,7 @@
 }
 
 .subtituloseguircomprando {
-    text-align: justify;
+    text-align: center;
     font-weight: lighter;
     font-family: 'Lucida Sans';
     font-size: 5px;
