coreccion nombres de clases

--- a/styles.css
+++ b/styles.css
@@ -546,7 +546,7 @@
         position: relative;
         left: 200px;
     }
-    .Adonis {
+    .adonis {
         display: flex;
         padding: 0;
         justify-content: center;
