coreccion de margin formulario

--- a/styles.css
+++ b/styles.css
@@ -464,6 +464,7 @@
     padding: 30px;
     margin: auto;
     margin-top: 100px;
+    margin-bottom: 100px;
     border-radius: 4px;
     font-family: 'Calibri';
     color: white;
