--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,7 @@
     margin: 30px 30px;
     margin-top: 40px;
     font-size: 10px;
+    margin-right: 20px;
 }
 .tarjetas__tiendas {
     margin-top: 60px;
@@ -300,6 +301,7 @@
     margin-top: 40px;
     font-size: 10px; 
     margin-bottom: 200px;
+    margin-right: 20px;
 }
 .tarjetas__abajo {
     margin-top: 60px;
