--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,7 @@
     color: blueviolet;
     font-size: 30px;
     margin-top: 100px;
+    text-align: center;
 }
 .opcion{
     font-weight: lighter;
@@ -487,6 +488,12 @@
         flex-direction: row;
     }
     .button{
+        flex-direction: row;
+    }
+    .cuenta{
+        text-align: center;
+    }
+    .tarjetacarrito{
         flex-direction: row;
     }
     .coleccion {
