--- a/styles.css
+++ b/styles.css
@@ -484,11 +484,25 @@
     .articulos{
         flex-direction: row;
     }
+    .articulo__imagen{
+        margin-bottom: 0;
+    }
     .descripcion{
         flex-direction: row;
+        padding: 10px;
+        margin: 0;
+        height: 40vh;
     }
     .button{
         flex-direction: row;
+    }
+    .button__articulo{
+        padding: 20px 40px;
+        border-radius: 4px;
+        font-size: 18px;
+        margin: 80px;
+        margin-bottom: 0;
+        top: -250px;
     }
     .cuenta{
         text-align: center;
@@ -505,11 +519,15 @@
     .coleccion__footer {
 
         height: 40vh;
+        line-height: 100%;
+        font-size: 20px;
 
         font-size: 18px;
     }
     .lista ul{
         flex-direction: row;
+        align-items: start;
+        margin: 0;
 
     }
     .titulo__ayuda {
