--- a/styles.css
+++ b/styles.css
@@ -493,16 +493,19 @@
         margin: 0;
         height: 40vh;
     }
+    .descripcion__articulos{
+        font-size: 18px;
+    }
     .button{
         flex-direction: row;
     }
     .button__articulo{
-        padding: 20px 40px;
+        padding: 10px 30px;
         border-radius: 4px;
         font-size: 18px;
-        margin: 80px;
+        margin: 60px;
         margin-bottom: 0;
-        top: -250px;
+        
     }
     .cuenta{
         text-align: center;
