--- a/styles.css
+++ b/styles.css
@@ -491,7 +491,7 @@
         flex-direction: row;
         padding: 10px;
         margin: 0;
-        height: 40vh;
+        height: 0;
         margin-top: -100px;
     }
     .descripcion__articulos{
@@ -504,7 +504,7 @@
         padding: 10px 20px;
         border-radius: 3px;
         font-size: 18px;
-        margin: 60px;
+        margin: 40px;
         margin-bottom: 0;
         
     }
