--- a/styles.css
+++ b/styles.css
@@ -506,6 +506,7 @@
         font-size: 18px;
         margin: 40px;
         margin-bottom: 0;
+        margin-top: -100px;
         
     }
     .cuenta{
