--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,7 @@
         font-size: 18px;
         margin: 60px;
         margin-bottom: 0;
-        margin-top: -100px;
+        margin-top: -50px
         
     }
     .titulo__temas{
